added second page design

--- a/index.html
+++ b/index.html
@@ -1,23 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-   <section id="honda">
-    <dib class="honda-content">
-        <img class="image-style"src="assets/Group.png" alt="">
-        <p class="title">"In the near future, I hope to become a Developer."</p>
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        <p></p>
-        <div class="btn-container">
-            <button class="btn">Contact with me</button>
-        </div>
-       
-    </dib>
-   </section>
+    <section id="honda">
+        <dib class="honda-content">
+            <img class="image-style" src="assets/Group.png" alt="">
+            <p class="title">"In the near future, I hope to become a Developer."</p>
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p></p>
+            <div class="btn-container">
+                <button class="btn">Contact with me</button>
+            </div>
+
+        </dib>
+    </section>
+    <main>
+        <section class="page">
+            <div class="page-content">
+                <h1 class="page-title">Why Web Development??</h1>
+                <p class="page-discription">Web development is a fast-paced and challenging career, centered on
+                    creative problem-solving and continuous innovation . As a web developer you'll work with a
+                    multidisciplinary team of designers, other developers, and marketers to realize your projects.M</p>
+            </div>
+            <div class="team">
+                <div class="team-banner1">
+                    <h2 class="team-title">I will Do Coding and Change The World</h2>
+                    <p class="team-discription">It is possible to change the world if you learn coding well.</p>
+                    <a href=""><button class="btn2">Learn More</button></a>
+                </div>
+                <img class="layer" src="assets/Layer_1.png" alt="">
+            </div>
+
+            <div class="team2">
+                <img class="layer2" src="assets/Group 3.png" alt="">
+                <div class="team-banner2">
+                    <h2 class="team-title">I will help People by creating Modern Web System</h2>
+                    <p class="team-discription">I want to help cmomon people. I will create a website that will benefit
+                        people. </p>
+                    <a href=""><button class="btn2">Learn More</button></a>
+                </div>
+
+            </div>
+
+            <div class="team">
+                <div class="team-banner1">
+                    <h2 class="team-title">I will Do Coding and Change The World</h2>
+                    <p class="team-discription">It is possible to change the world if you learn coding well.</p>
+                    <a href=""><button class="btn2">Learn More</button></a>
+                </div>
+                <img class="layer1" src="assets/Group 4.png" alt="">
+            </div>
+
+        </section>
+    </main>
 </body>
+
 </html>
