added video style

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
             </div>
 
         </section>
+        <section>
+            <div class="team3">
+                <h2 class="team3-title" id="contact">My Inspiration</h2>
+                <p class="team3-discription">My inspiration is Jhankar Mahbub. He is a very good developer. I want to
+                    be a developer like him. I want to be successful like him.</p>
+            </div>
+            <div class="vdo-border">
+                <iframe class="video-style" src="https://www.youtube.com/embed/JUwePydwbUI?si=Iq88Oif0c2qf8ggi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+            </div>
+        </section>
     </main>
 </body>
 
