added all design code

--- a/index.html
+++ b/index.html
@@ -69,7 +69,58 @@
                 <iframe class="video-style" src="https://www.youtube.com/embed/JUwePydwbUI?si=Iq88Oif0c2qf8ggi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
             </div>
         </section>
+        <section>
+            <div>
+                <h2 class="layer3-title">My Current Target</h2>
+                <p class="layer3-discription">My Current Target Is To Learn HTML CSS JAVASCRIPT Very Well And Move
+                    Towards Next Target</p>
+            </div>
+            <div class="layer4-banner">
+                <div class="layer4">
+                    <img class="layer4-image " src="assets/html.png" alt="">
+                    <h3 class="layer4-title">HTML</h3>
+                    <p class="layer4-discription"> Hypertext Markup Language. HTML Is a Standard Mark Up Language </p>
+                    <a class="layer4-btn">Learn More</a>
+                </div>
+                <div class="layer4"> 
+                    <img class="layer4-image " src="assets/css.png" alt="">
+                    <h3 class="layer4-title">CSS</h3>
+                    <p class="layer4-discription"> Hypertext Markup Language. HTML Is a Standard Mark Up Language </p>
+                    <a class="layer4-btn">Learn More</a>
+                  </div>
+                  <div class="layer4"> 
+                    <img class="layer4-image " src="assets/js.png" alt="">
+                    <h3 class="layer4-title">JavaScript</h3>
+                    <p class="layer4-discription"> Hypertext Markup Language. HTML Is a Standard Mark Up Language </p>
+                    <a class="layer4-btn">Learn More</a>
+                  </div>
+
+            </div>
+
+        </section>
+
     </main>
+    <footer>
+        <div>
+            <div class="design5">
+                <h2 class="design5-title">I need Support</h2>
+                <p class="design5-discription">I need Support. Please Everybody Support Me.</p>
+                <input class="design5-text" type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                <input class="design5-btn" type="submit" value="submit">
+            </div>
+        </div>
+        <div class="footer-style">
+            <p class="footer-title">An Open Commitment by Awlad Hossain</p>
+            
+                <img class="fb-style" src="/assets/facebook.png" alt="">
+                <img class="git-style" src="/assets/github.png" alt="">
+                <img class="linkin-style" src="/assets/linkedin-icon 1.png" alt="">
+
+            
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
